src/objects/vlocity_ins__TemplateDesignerConfiguration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Template designer configuration settings</description>
    <fields>
        <fullName>vlocity_ins__AutoSave__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable template designer autoSave.</description>
        <inlineHelpText>Enable template designer autoSave.</inlineHelpText>
        <label>Auto Save</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DefaultAuthor__c</fullName>
        <label>Default Author</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EditorTheme__c</fullName>
        <label>Editor Theme</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FontSize__c</fullName>
        <label>Font Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__WordWrap__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable template designer wordwrap.</description>
        <inlineHelpText>Enable template designer wordwrap.</inlineHelpText>
        <label>Wordwrap</label>
        <type>Checkbox</type>
    </fields>
    <label>Template Designer Configuration</label>
</CustomObject>